Convert ResourceListPayload to ResourcePayload[]